[tool.poetry]
name = "ptlflow"
version = "0.2.7"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
einops = ">=0.3.0,<=0.4"
numpy = ">=1.17.0,<=1.25"
opencv-python = ">=4.0.0.21,<=4.6"
packaging = ">=20.0,<=21"
pandas = ">=1.1.0,<=1.4"
pillow = ">=5.0,<=9.2"
plotly = ">=5.0.0,<=5.9"
pypng = "~=0.0.16"
pytorch-lightning = ">=1.1.0,<=1.6,!=1.3,!=1.4"
requests = ">=2.0.0,<=2.28"
scipy = ">=1.0.0,<=1.9"
tabulate = "~=0.8.3"
timm = "~=0.6.3"
torch = ">=1.8.1,<=1.12"
torchmetrics = ">=0.2,<=0.9"
torchvision = ">=0.9.2,<=0.13"
tqdm = ">=4.41.0,<=4.64"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
